	-> bugfix: disable automatic bidi processing, which is broken and leads to a program crash, and let the user manually switch between left-to-right and right-to-left orientation
	-> bugfix: fix broken baseline merging when merging lines with words
	-> bugfix: fix broken client side export (update saxon version)
	-> keep zoom when switching between pages
	-> bugfix: unable to add some unicode values to virtual keyboard
	
1.5.4:
	-> bugfix: broken image display on Linux systems
	-> enhancement/bugfix: remove unused jars from libs folder on program start
	
1.6.0:
	-> Displayed images are rotated according to EXIF orientation tag value
	-> Support user defined empty tags (like the <gap/> tag)
	-> Support java versions > 8 
	-> bugfix: virtual keyboard shortcut issues
	-> Add login btn to toolbar
	-> bugfix: clear doc table filter when loading another collection
	-> bugfix: Speed up 'Add page(s) to document' in document manager
	-> Enable export of versions created by some 'tool', User get selection of all 'toolnames' which have run on that document
	-> User activity: Shows a edit history per collection - more specifically sees the latest 'saves' and 'status changes' for each page and can also load that page with double click
	-> 'Compare Text Differences Tool' does not block, and (if wished) it shows the line numbering like the text editor
	-> Automatic saving tool: Stores transcript of a page from time to time locally to the user directory. If user loads a remote page it checks if a local version exists and if it is newer then the version on the server - if so it can be stored to the server. Settings can be made via the 'Save button' drop down menu.
	-> Option to change the reading order for all subsequent shapes as well, e.g. ro '35' changes to '3', afterwards '36' to '4', '37' to '5', '38' to '6' till the end of the shape list with the same parent.
	
1.6.1:
	-> P2PaLA recognition functionality for pre-trained models under ToolsWidget->Other Tools 	
	