@@ -4,7 +4,7 @@
 	<groupId>eu.transkribus</groupId>
 	<artifactId>TranskribusSwtGui</artifactId>
 	<packaging>jar</packaging>
-	<version>1.6.1.1-SNAPSHOT</version>
+	<version>1.6.1.2-SNAPSHOT</version>
 	<name>Transkribus</name>
 
 	<properties>
